# src/app.ts
@@ -1,26 +1,27 @@
-import express from "express"
-import authRoutes from "./routes/auth.route"
-import categoryRoutes from "./routes/category.route"
-import profileRoutes from "./routes/profile.route"
-import { errorHandler } from "./middlewares/error.middleware"
-import { swaggerDocs } from "./docs/swagger"
+import "dotenv/config";
+import express from "express";
+import authRoutes from "./routes/auth.route";
+import categoryRoutes from "./routes/category.route";
+import profileRoutes from "./routes/profile.route";
+import { errorHandler } from "./middlewares/error.middleware";
+import { swaggerDocs } from "./docs/swagger";
 
-const app = express()
-app.use(express.json({ limit: '10mb' }))
-app.use(express.urlencoded({ limit: '10mb', extended: true }))
+const app = express();
+app.use(express.json({ limit: "10mb" }));
+app.use(express.urlencoded({ limit: "10mb", extended: true }));
 if (process.env.ENVIRONMENT === "DEV") {
-    swaggerDocs(app)
+  swaggerDocs(app);
 }
 
 app.get("/", (req: express.Request, res: express.Response) => {
-    res.status(200).json({
-        message: "Welcome to EcoReport API"
-    })
-})
-app.use("/api/auth", authRoutes)
-app.use("/api/profile", profileRoutes)
-app.use("/api/category", categoryRoutes)
+  res.status(200).json({
+    message: "Welcome to EcoReport API",
+  });
+});
+app.use("/api/auth", authRoutes);
+app.use("/api/profile", profileRoutes);
+app.use("/api/category", categoryRoutes);
 
-app.use(errorHandler)
+app.use(errorHandler);
 
-export default app
+export default app;
