# src/routes/profile.route.ts
@@ -1,13 +1,19 @@
-import { Router } from "express"
-import * as controller from "../controllers/profile.controller"
-import { updateProfileSchema } from "../schemas/profile.schema"
-import { validate } from "../middlewares/validation.middleware"
-import { verifyToken } from "../middlewares/authentication.middleware"
-import { upload } from "../config/multer"
+import { Router } from "express";
+import * as controller from "../controllers/profile.controller";
+import { updateProfileSchema } from "../schemas/profile.schema";
+import { validate } from "../middlewares/validation.middleware";
+import { verifyToken } from "../middlewares/authentication.middleware";
+import { upload } from "../config/multer";
 
-const router = Router()
+const router = Router();
 
-router.get("/", verifyToken, controller.getProfile)
-router.put("/", verifyToken, upload.single("profile_picture"), validate(updateProfileSchema), controller.updateProfile)
+router.get("/", verifyToken, controller.getProfile);
+router.put(
+  "/",
+  verifyToken,
+  upload.single("profile_picture"),
+  validate(updateProfileSchema),
+  controller.updateProfile,
+);
 
-export default router
+export default router;
